Fix spacing

--- a/scss/sections/_page-content.scss
+++ b/scss/sections/_page-content.scss
@@ -441,5 +441,5 @@
 .bottom-divider{
     border-bottom:1px solid #E0E0E0!important;
     padding-bottom:30px;
-    margin-bottom:100px;
+    margin-bottom:60px;
 }
